# Compile

./: .gitignore  CMakeLists.txt  Expression.cpp  Expression.h  PrattParser.cpp  PrattParser.h  Scanner.cpp  Scanner.h  main.cpp  vcpkg.json
test/: TestParttParser.cpp
